--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react": "^17.0.16",
+    "@types/react-dom": "^17.0.9",
+    "axios": "^0.21.1",
     "react": "^17.0.2",
+    "react-debounce-input": "^3.2.4",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
