--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ghapp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://dezolutions.github.io/test-atlana/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -15,6 +16,7 @@
     "@types/react-transition-group": "^4.4.2",
     "@types/redux": "^3.6.0",
     "axios": "^0.21.1",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-debounce-input": "^3.2.4",
     "react-dom": "^17.0.2",
@@ -31,7 +33,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
